# text-classifier

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
base/: Makefile.am  cat.h  columnfile-capnp.cc  columnfile-capnp.h  columnfile-internal.h  columnfile-reader.cc  columnfile-select.cc  columnfile-writer.cc  columnfile.cc  columnfile.h  columnfile_test.cc  compression.cc  compression.h  concurrency.h  delegate.h  error.cc  error.h  file.cc  file.h  futex.h  hash.cc  hash.h  macros.h  parallel-sort.h  random.cc  random.h  region.h  socket.h  string.cc  string.h  stringref.h  thread-pool.h
debian/: changelog  control  copyright  rules
examples/: kaggle-dato-native.py
index/: Makefile.am
index/web/: tagsoup.cc  tagsoup.h
m4/: ax_cxx_compile_stdcxx_14.m4
tools/text-classifier/: .gitignore  23andme.cc  23andme.h  Makefile.am  common.h  html-tokenizer.cc  html-tokenizer.h  model.cc  model.h  reuters_test.cc  svm.cc  svm.h  table-storage.h  text-classifier.cc  utf8.h
tools/text-classifier/reuters/: reut2-001.sgm  reut2-002.sgm  reut2-003.sgm  reut2-004.sgm  reut2-005.sgm  reut2-006.sgm  reut2-007.sgm  reut2-008.sgm  reut2-009.sgm  reut2-010.sgm  reut2-011.sgm  reut2-012.sgm  reut2-013.sgm  reut2-014.sgm  reut2-015.sgm  reut2-016.sgm  reut2-017.sgm  reut2-018.sgm  reut2-019.sgm  reut2-020.sgm
