AC_INIT([text-classifier],[1.0])
AM_INIT_AUTOMAKE([foreign nostdinc subdir-objects])

AC_CONFIG_MACRO_DIR([m4])

AM_MAINTAINER_MODE([disable])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CANONICAL_HOST

AC_GNU_SOURCE

PKG_CHECK_MODULES([CAPNP], [capnp])
PKG_CHECK_MODULES([LIBLZ4], [liblz4], [HAVE_LZ4=1], [HAVE_LZ4=0])
PKG_CHECK_MODULES([LIBLZMA], [liblzma], [HAVE_LZMA=1], [HAVE_LZMA=0])
PKG_CHECK_MODULES([ZLIB], [zlib], [HAVE_ZLIB=1], [HAVE_ZLIB=0])
PKG_CHECK_MODULES([DUMMYZ], [dummyz], [HAVE_DUMMYZ=1], [HAVE_DUMMYZ=0])

AC_DEFINE_UNQUOTED([HAVE_LZ4], [$HAVE_LZ4], [Have lz4])
AC_DEFINE_UNQUOTED([HAVE_LZMA], [$HAVE_LZMA], [Have lzma])
AC_DEFINE_UNQUOTED([HAVE_ZLIB], [$HAVE_ZLIB], [Have zlib])
AC_DEFINE_UNQUOTED([HAVE_DUMMYZ], [$HAVE_DUMMYZ], [Have libdummyz])

AM_PROG_AR
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

LT_INIT

AC_LANG_PUSH([C++])
AC_CHECK_HEADER(
  [snappy.h], [AC_CHECK_LIB([snappy], [snappy_compress], [], [])], [])

AX_OPENMP()
AX_CXX_COMPILE_STDCXX_14([ext])
AC_LANG_POP([C++])

AC_LANG_PUSH([C])
AX_OPENMP()
AC_LANG_POP([C])

CFLAGS="$CFLAGS -fuse-ld=gold $OPENMP_CFLAGS"
CXXFLAGS="$CXXFLAGS -fuse-ld=gold $OPENMP_CXXFLAGS"

AM_CONDITIONAL(HAVE_LIBSNAPPY, [test "$HAVE_LIBSNAPPY" = 1])


AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
