AC_INIT([text-classifier],[1.0.3])
AM_INIT_AUTOMAKE([foreign nostdinc subdir-objects])

AC_CONFIG_MACRO_DIR([m4])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CANONICAL_HOST

AC_GNU_SOURCE

PKG_CHECK_MODULES([CAPNP], [capnp >= 0.5])

AM_PROG_AR
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

LT_INIT

AC_LANG_PUSH([C++])
AX_OPENMP()
AC_LANG_POP([C++])

AC_LANG_PUSH([C])
AX_OPENMP()
AC_LANG_POP([C])

CFLAGS="$CFLAGS -fuse-ld=gold $OPENMP_CFLAGS"
CXXFLAGS="$CXXFLAGS -fuse-ld=gold $OPENMP_CXXFLAGS"

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
