noinst_LTLIBRARIES += \
  base/libbase.la

base_libbase_la_SOURCES = \
  base/cat.h \
  base/concurrency.h \
  base/delegate.h \
  base/error.cc \
  base/error.h \
  base/file.cc \
  base/file.h \
  base/futex.h \
  base/hash.cc \
  base/hash.h \
  base/macros.h \
  base/parallel-sort.h \
  base/random.cc \
  base/random.h \
  base/region.h \
  base/socket.h \
  base/string.cc \
  base/string.h \
  base/stringref.h \
  base/thread-pool.h
base_libbase_la_LIBADD = \
  $(CAPNP_LIBS)
