bin_PROGRAMS += \
  tools/text-classifier/text-classifier

tools_text_classifier_text_classifier_SOURCES = \
  tools/text-classifier/23andme.cc \
  tools/text-classifier/html-tokenizer.cc \
  tools/text-classifier/text-classifier.cc
tools_text_classifier_text_classifier_LDADD = \
  index/libtagsoup.la \
  base/libbase.la
