bin_PROGRAMS += \
  tools/text-classifier/text-classifier

tools_text_classifier_text_classifier_SOURCES = \
  tools/text-classifier/23andme.cc \
  tools/text-classifier/23andme.h \
  tools/text-classifier/common.h \
  tools/text-classifier/html-tokenizer.cc \
  tools/text-classifier/html-tokenizer.h \
  tools/text-classifier/model.cc \
  tools/text-classifier/model.h \
  tools/text-classifier/svm.cc \
  tools/text-classifier/svm.h \
  tools/text-classifier/text-classifier.cc \
  tools/text-classifier/utf8.h
tools_text_classifier_text_classifier_LDADD = \
  index/libtagsoup.la \
  base/libbase.la
